# esp-idf-hello-world

./: Cargo.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
